# project-F

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
data/graphs/: .gitkeep
data/processed/: .gitkeep
data/uploads/: .gitkeep
scripts/: detect_conflicts.py  ingest.py
src/: __init__.py
src/agents/: __init__.py  comparator.py  judge.py  multi_doc_analyzer.py  reference_detector.py  report_generator.py  schemas.py
src/ingestion/: __init__.py  chunker.py  pdf_parser.py  schemas.py
src/knowledge/: __init__.py  cross_reference.py  entity_extractor.py  entity_resolver.py  graph_store.py  graph_visualizer.py  schemas.py  timeline_builder.py  vector_store.py
src/utils/: __init__.py  llm_factory.py  logger.py
tests/: __init__.py  conftest.py  generate_fixtures.py  test_agents.py  test_api.py  test_entity_extractor.py  test_entity_resolver.py  test_graph_visualizer.py  test_ingestion.py  test_knowledge.py  test_llm_factory.py  test_multi_doc.py  test_pdf_parser.py  test_reference_detector.py  test_report_generator.py  test_timeline.py
tests/fixtures/: README.md
ui/: __init__.py  app.py
ui/components/: __init__.py  analysis.py  conflicts.py  graph.py  inspector.py  report.py  sidebar.py  timeline.py  upload.py
ui/static/: style.css
ui/utils/: __init__.py  api_client.py  formatters.py
